syntax = "proto3";

package auth;

service Auth {
	rpc Login(LoginParam) returns (LoginRet) {};
}

message LoginParam {
	string Account = 1;
	string Password = 2;
}

message LoginRet {
	string Error = 1;
	int32 UserId = 2;
}

